Fixed an empty template. Also, the title was too big in the baseapp.html template.

--- a/lumix/base/static/css/lumix.css
+++ b/lumix/base/static/css/lumix.css
@@ -12,6 +12,6 @@
 }
 
 .header-title {
-    font-size: 2.8em;
+    font-size: 1.2em;
     vertical-align: text-bottom;
 }
